fixed issues on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -181,9 +181,7 @@ main {
     font-family: 'Oxygen';
     background-color: rgba(255, 201, 94, 0.9);
     color: black;
-    display: inline-block;
     padding: 12px;
-    padding: .2rem;
   }
 
   .herobutton {
@@ -334,7 +332,6 @@ main {
 /*<----------------------->*/
 
 .aboutcontent img {
-    object-fit: contain;
     height: fit-content;
     width: 100%; 
     height: 100%;
@@ -342,10 +339,15 @@ main {
 }
 .aboutcontent {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(450px,1fr));
-    padding-left: 25px;
-    padding-right: 25px;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    /*padding-right: 25px;*/
     gap: 15px;
+}
+
+.aboutcontent p {
+    /*width: fit-content;*/
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 /*<----------------------->*/
